--- a/mkti/site/css/comp.css
+++ b/mkti/site/css/comp.css
@@ -100,6 +100,57 @@
     bottom: 20px;
     right: 20px;
   }
+
+  .c-style-3 figure {
+  overflow: hidden;
+}
+
+.c-style-3 figure img {
+  -webkit-transition: -webkit-transform 0.4s;
+  -moz-transition: -moz-transform 0.4s;
+  transition: transform 0.4s;
+}
+
+.no-touch .c-style-3 figure:hover img,
+.c-style-3 figure.cs-hover img {
+  -webkit-transform: translateY(-20px);
+  -moz-transform: translateY(-20px);
+  -ms-transform: translateY(-20px);
+  transform: translateY(-20px);
+}
+
+.c-style-3 figcaption {
+  height: 20px;
+  width: 100%;
+  top: auto;
+  bottom: 0;
+  opacity: 0;
+  -webkit-transform: translateY(100%);
+  -moz-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%);
+  -webkit-transition: -webkit-transform 0.4s, opacity 0.1s 0.3s;
+  -moz-transition: -moz-transform 0.4s, opacity 0.1s 0.3s;
+  transition: transform 0.4s, opacity 0.1s 0.3s;
+}
+
+.no-touch .c-style-3 figure:hover figcaption,
+.c-style-3 figure.cs-hover figcaption {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+  -moz-transform: translateY(0px);
+  -ms-transform: translateY(0px);
+  transform: translateY(0px);
+  -webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
+  -moz-transition: -moz-transform 0.4s, opacity 0.1s;
+  transition: transform 0.4s, opacity 0.1s;
+}
+
+.c-style-3 figcaption a {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+}
 }
 
 @media only screen and (min-width: 485px) and (max-width: 768px) {
@@ -151,31 +202,6 @@
     content: 'by ';
   }
 
- /* .car figcaption a {
-    text-align: center;
-    font-size: 1em;
-    padding: 5px 5px;
-    border-radius: 1px;
-    display: inline-block;
-    background: #ed4e6e;
-    color: #fff;
-  }*/
-
-  /*.c-style-5 figure img {
-    z-index: 10;
-    -webkit-transition: -webkit-transform 0.4s;
-    -moz-transition: -moz-transform 0.4s;
-    transition: transform 0.4s;
-  }
-
-  .no-touch .c-style-5 figure:hover img,
-  .c-style-5 figure.cs-hover img {
-    -webkit-transform: scale(0.4);
-    -moz-transform: scale(0.4);
-    -ms-transform: scale(0.4);
-    transform: scale(0.4);
-  }
-*/
   .c-style-5 figcaption {
     height: 100%;
     width: 100%;
@@ -200,11 +226,55 @@
     transform: scale(1);
     opacity: 1;
   }
-  .c-style-5 figure a {
+  .c-style-5 figure a:link {
+    color: white;
     position: absolute;
     bottom: 20px;
     right: 20px;
   }
+  .c-style-5 figure a:hover {
+    color: #334960;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+  }
+
+    .c-style-3 figure {
+  overflow: hidden;
+}
+
+.c-style-3 figcaption {
+  height: 30px;
+  width: 100%;
+  top: auto;
+  bottom: 0;
+  opacity: 0;
+  -webkit-transform: translateY(100%);
+  -moz-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%);
+  -webkit-transition: -webkit-transform 0.4s, opacity 0.1s 0.3s;
+  -moz-transition: -moz-transform 0.4s, opacity 0.1s 0.3s;
+  transition: transform 0.4s, opacity 0.1s 0.3s;
+}
+
+.no-touch .c-style-3 figure:hover figcaption,
+.c-style-3 figure.cs-hover figcaption {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+  -moz-transform: translateY(0px);
+  -ms-transform: translateY(0px);
+  transform: translateY(0px);
+  -webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
+  -moz-transition: -moz-transform 0.4s, opacity 0.1s;
+  transition: transform 0.4s, opacity 0.1s;
+}
+
+.c-style-3 figcaption a {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+}
 }
 
 @media only screen and (max-width: 480px) {
@@ -256,31 +326,6 @@
     content: 'by ';
   }
 
- /* .car figcaption a {
-    text-align: center;
-    font-size: 0.2em;
-    padding: 5px 5px;
-    border-radius: 0.5px;
-    display: inline-block;
-    background: #ed4e6e;
-    color: #fff;
-  }
-*/
-/*  .c-style-5 figure img {
-    z-index: 10;
-    -webkit-transition: -webkit-transform 0.4s;
-    -moz-transition: -moz-transform 0.4s;
-    transition: transform 0.4s;
-  }
-
-  .no-touch .c-style-5 figure:hover img,
-  .c-style-5 figure.cs-hover img {
-    -webkit-transform: scale(0.4);
-    -moz-transform: scale(0.4);
-    -ms-transform: scale(0.4);
-    transform: scale(0.4);
-  }
-*/
   .c-style-5 figcaption {
     height: 100%;
     width: 100%;
@@ -305,9 +350,48 @@
     transform: scale(1);
     opacity: 1;
   }
-  .c-style-5 figure a {
+  .c-style-5 figure a:link {
+    color: white;
     position: absolute;
     bottom: 5px;
     right: 5px;
   }
+  .c-style-5 figure a:hover {
+    color: #334960;
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+  }
+  .c-style-3 figcaption {
+  height: 30px;
+  width: 100%;
+  top: auto;
+  bottom: 0;
+  opacity: 0;
+  -webkit-transform: translateY(100%);
+  -moz-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%);
+  -webkit-transition: -webkit-transform 0.4s, opacity 0.1s 0.3s;
+  -moz-transition: -moz-transform 0.4s, opacity 0.1s 0.3s;
+  transition: transform 0.4s, opacity 0.1s 0.3s;
+}
+
+.no-touch .c-style-3 figure:hover figcaption,
+.c-style-3 figure.cs-hover figcaption {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+  -moz-transform: translateY(0px);
+  -ms-transform: translateY(0px);
+  transform: translateY(0px);
+  -webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
+  -moz-transition: -moz-transform 0.4s, opacity 0.1s;
+  transition: transform 0.4s, opacity 0.1s;
+}
+
+.c-style-3 figcaption a {
+  position: absolute;
+    bottom: 5px;
+    right: 5px;
+}
 }
