--- a/mkti/site/css/grid.css
+++ b/mkti/site/css/grid.css
@@ -93,9 +93,21 @@ body {
   width: 220px;
 }
 
-@media only screen and (min-width: 375px) and (max-width: 740px) {
+@media only screen and (min-width: 240px) and (max-width: 740px) and (orientation: portrait) {
   .container_12 .posn {
     display: list-item;
+    max-width: 310px;
+  }
+  .container_12 .grid_3b {
+    width: 300px;
+    padding-bottom: 40px;
+    float: left;
+  }
+}
+@media only screen and (min-width: 240px) and (max-width: 740px) and (orientation: landscape) {
+  .container_12 .posn {
+    display: inline-block;
+    min-width: 560px;
   }
   .container_12 .grid_3b {
     width: 300px;
@@ -179,6 +191,7 @@ body {
   width: 860px;
 }
 @media only screen and (max-width: 759px) {
+
   .container_12 .grid_12 .menu_block {
     visibility: hidden;
   }
@@ -187,12 +200,18 @@ body {
   .container_12 .grid_12 {
     width: 760px;
   }
+  .container_12 .grid_12 h4 {
+    font-size: 1.7em;
+  }
 }
 
 @media only screen and (min-width: 769px) {   /*desktop*/
   .container_12 .grid_12 {
-    width: 1200px;
-    margin-left: -60px;
+    width: 85em;
+    margin-left: -100px;
+  }
+  .container_12 .grid_12 h4 {
+    font-size: 2em;
   }
 }
 
@@ -204,7 +223,7 @@ body {
 
 @media only screen and (max-width: 768px) {
   .container_12 .grid_13 .slider_wrapper .items {
-    width: 760px;
+    width: 750px;
   }
 }
 
@@ -226,6 +245,7 @@ body {
   #abtus p {
     text-align: justify;
     padding: 0.5em 0.5em 0.5em 0.5em;
+    color: white;
   }
 }
 
@@ -249,6 +269,7 @@ body {
   #abtus p {
     text-align: justify;
     padding: 2px 2px 2px 2px;
+    color: white;
   }
 }
 
@@ -275,6 +296,7 @@ body {
     text-align: justify;
     padding: 2px 2px 2px 2px;
     font-size: large;
+    color: white;
   }
 }
 
